サウンドボタンの追加

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,6 +33,7 @@
 @import "object/component/form";
 @import "object/component/modal";
 @import "object/component/slider";
+@import "object/component/sound";
 @import "object/component/test";
 
 
