リンク色を白に修正

--- a/src/scss/setting/_settings.scss
+++ b/src/scss/setting/_settings.scss
@@ -5,7 +5,7 @@
 //=====================================
 
 $color-default:   #111;
-$color-link:      #0099CC;
+$color-link:      #FFF;
 
 $color-black:     #000;
 $color-white:     #FFF;
