--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
-@import "mixins/mixins";
-@import "setting/settings";
+@use "mixins/mixins";
+@use "setting/settings";
 
 ////////////////////////////////////
 // basic
@@ -10,18 +10,18 @@
 @import "foundation/basis";
 @import "foundation/responsive";
 
-////////////////////////////////////
-// layout
-////////////////////////////////////
+// ////////////////////////////////////
+// // layout
+// ////////////////////////////////////
 
 @import "layout/header";
 @import "layout/footer";
 @import "layout/nav";
 @import "layout/main";
 
-////////////////////////////////////
-// components
-////////////////////////////////////
+// ////////////////////////////////////
+// // components
+// ////////////////////////////////////
 
 @import "object/component/totop";
 @import "object/component/social";
@@ -37,17 +37,17 @@
 // @import "object/component/test";
 
 
-////////////////////////////////////
-// theme
-////////////////////////////////////
+// ////////////////////////////////////
+// // theme
+// ////////////////////////////////////
 
 @import "object/project/home";
 @import "object/project/page";
 @import "object/project/reserve";
 
-////////////////////////////////////
-// Helpers
-////////////////////////////////////
+// ////////////////////////////////////
+// // Helpers
+// ////////////////////////////////////
 
 @import "object/utility/color";
 @import "object/utility/text";
