--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
-// フッター
-//------------------------------------------------
+@use "../mixins/mixins" as *;
+@use "../setting/settings" as *;
 
 .image-footer-logo{
   @include media(sp){
