--- a/src/scss/object/component/_button.scss
+++ b/src/scss/object/component/_button.scss
@@ -1,5 +1,8 @@
 @charset "utf-8";
 
+@use "../../mixins/mixins" as *;
+@use "../../setting/settings" as *;
+
 .button{
 	display: inline-flex;
 	background-color: transparent;
