--- a/src/scss/object/component/_image.scss
+++ b/src/scss/object/component/_image.scss
@@ -1,5 +1,8 @@
 @charset "utf-8";
 
+@use "../../mixins/mixins" as *;
+@use "../../setting/settings" as *;
+
 .image-circle{
 	border-radius: 50%;
 }
