--- a/src/scss/object/component/_social.scss
+++ b/src/scss/object/component/_social.scss
@@ -1,5 +1,8 @@
 @charset "utf-8";
 
+@use "../../mixins/mixins" as *;
+@use "../../setting/settings" as *;
+
 .area-social{
 	img{
 		vertical-align: bottom;
