--- a/src/scss/object/component/_table.scss
+++ b/src/scss/object/component/_table.scss
@@ -1,5 +1,8 @@
 @charset "utf-8";
 
+@use "../../mixins/mixins" as *;
+@use "../../setting/settings" as *;
+
 .table{
 	margin-bottom: 1.5em;
 	width: 100%;
