--- a/src/scss/object/project/_reserve.scss
+++ b/src/scss/object/project/_reserve.scss
@@ -1,5 +1,8 @@
 @charset "utf-8";
 
+@use "../../mixins/mixins" as *;
+@use "../../setting/settings" as *;
+
 .reserve-block{
   margin-bottom: 40px;
 }
