--- a/src/scss/object/utility/_margin.scss
+++ b/src/scss/object/utility/_margin.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
-// 余白
-//------------------------------------------------
+@use "../../mixins/mixins" as *;
+@use "../../setting/settings" as *;
 
 .ma{
   margin: auto;
