--- a/src/scss/object/utility/_text.scss
+++ b/src/scss/object/utility/_text.scss
@@ -1,5 +1,8 @@
 @charset "utf-8";
 
+@use "../../mixins/mixins" as *;
+@use "../../setting/settings" as *;
+
 .tac{text-align: center;}
 .tar{text-align: right;}
 .ta{text-align: left!important;}
