ページの調整:お手当スケジュールの追加

--- a/src/pages/_header.ejs
+++ b/src/pages/_header.ejs
@@ -1,15 +1,15 @@
 <header id="header">
   <div class="container">
     <div class="header-logo">
-      <h1><img class="image-header-logo" src="https://cinemavalley.net/wp-content/themes/cinemavalley/img/footer_logo.png" alt="森のスープ屋の夜"><span class="header-text">お手当てのための宿</span></h1>
+      <h1><img class="image-header-logo" src="/img/footer_logo.png" alt="森のスープ屋の夜"><span class="header-text">お手当てのための宿</span></h1>
     </div>
-    <div class="header-toggle"> <i class="js-nav-toggle"><img src="https://cinemavalley.net/wp-content/themes/cinemavalley/img/bar_menu.png" alt=""></i> </div>
-    <nav id="nav"> <i class="nav-close js-nav-close"><img src="https://cinemavalley.net/wp-content/themes/cinemavalley/img/icon_close.png" alt="閉じる"></i>
+    <div class="header-toggle"> <i class="js-nav-toggle"><img src="/img/bar_menu.png" alt=""></i> </div>
+    <nav id="nav"> <i class="nav-close js-nav-close"><img src="/img/icon_close.png" alt="閉じる"></i>
       <ul class="list-nav">
-        <li class="link-nav-intro"><a href="#intro">ようこそ</a></li>
-        <li class="link-nav-map"><a href="#map">森のお散歩map</a></li>
-        <li class="link-nav-year"><a href="#year">森のいちねん</a></li>
-        <li class="link-nav-message"><a href="#outro">森との出会い＆建築士のメッセージ</a></li>
+        <li class="link-nav-intro"><a href="/#intro">ようこそ</a></li>
+        <li class="link-nav-map"><a href="/#map">森のお散歩map</a></li>
+        <li class="link-nav-year"><a href="/#year">森のいちねん</a></li>
+        <li class="link-nav-message"><a href="/#outro">お手当てのための宿の一日</a></li>
         <li class="link-nav-access"><a href="https://soupya.stores.jp/" target="_blank">online shop</a></li>
         <li class="link-nav-access"><a href="/access/">アクセス</a></li>
         <li class="link-nav-reservation"><a href="/reservation/">宿泊予約はこちら</a></li>
