--- a/src/scss/object/component/_modal.scss
+++ b/src/scss/object/component/_modal.scss
@@ -86,6 +86,12 @@
         margin-bottom: 35px;
       }
     }
+
+    &_message{
+      @include media(pc){
+        width: 700px;
+      }
+    }
   }
 
   &.is-active{
