--- a/src/pages/_meta.ejs
+++ b/src/pages/_meta.ejs
@@ -1,4 +1,5 @@
 <meta charset="UTF-8">
+<link rel="stylesheet" type="text/css" href="/css/first.css">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="format-detection" content="telephone=no,address=no,email=no">
 <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
