--- a/public/css/first.css
+++ b/public/css/first.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 body{
-  background-color: #fff;
+  background-color: #666;
   background-image: url('../img/bg_page.png');
 }
 
