--- a/src/scss/object/component/_modal.scss
+++ b/src/scss/object/component/_modal.scss
@@ -55,17 +55,15 @@
     max-width: 1080px;
     margin-left: auto;
     margin-right: auto;
-    -ms-overflow-y: auto;
-        overflow-y: auto;
+    overflow-y: auto;
     opacity: 0;
     transform: translateY(30px);
     transition: all 1.5s ease 0.85s;
     box-sizing: border-box;
     @include media(sp){
       padding: 15px;
-      max-height: 400px;
-      padding-top: 15px;
-      padding-bottom: 15px;
+      max-height: calc(100% - 100px);
+      margin-top: -40px;
     }
     @include media(pc){
       padding-left: 30px;
