画像の表示の調整

--- a/src/pages/_header.ejs
+++ b/src/pages/_header.ejs
@@ -1,7 +1,10 @@
 <header id="header">
   <div class="container">
     <div class="header-logo">
-      <h1><img class="image-header-logo" src="/img/footer_logo.png" alt="森のスープ屋の夜"><span class="header-text">お手当てのための宿</span></h1>
+      <h1>
+        <img class="image-header-logo" src="/img/footer_logo.png" alt="森のスープ屋の夜" title="森のスープ屋の夜" decoding="async" />
+        <span class="header-text">お手当てのための宿</span>
+      </h1>
     </div>
     <div class="header-toggle"> <i class="js-nav-toggle"><img src="/img/bar_menu.png" alt=""></i> </div>
     <nav id="nav"> <i class="nav-close js-nav-close"><img src="/img/icon_close.png" alt="閉じる"></i>
