--- a/src/pages/_sound.ejs
+++ b/src/pages/_sound.ejs
@@ -1,3 +1,3 @@
 <div id="sound" class="sound">
-  <div class="sound-wrapper"> <span class="sound-button"><img src="/img/soundbutton_play.svg" alt="音楽を再生する"></span> </div>
+  <div class="sound-wrapper"> <span class="sound-button"><img src="/img/soundbutton_play.svg" alt="音楽を再生する" decoding="async" /></span> </div>
 </div>
