--- a/src/pages/_meta.ejs
+++ b/src/pages/_meta.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" type="text/css" href="/css/first.css">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="format-detection" content="telephone=no,address=no,email=no">
-<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
+<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 <meta name="google" content="nositelinkssearchbox" />
 <script type="text/javascript">
   window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
